[package]
name = "burgershop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.130"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
dotenv = "0.15.0"
